VulnVersion/tests/vet_taxonomy_corpus/work/ImageMagick/CVE-2022-32546/step1/fix_evidence/f221ea0fa317/show_name_status.txt
commit f221ea0fa3171f0f4fdf74ac9d81b203b9534c23
Author:     xiaoxiaoafeifei <lliangliang2007@163.com>
AuthorDate: Thu Mar 24 23:34:47 2022 +0800
Commit:     GitHub <noreply@github.com>
CommitDate: Thu Mar 24 11:34:47 2022 -0400

    Fixes #4985: 4e+26 is outside the range of representable values of type 'unsigned long' at coders/pcl.c:299 (#4986)
    
    * fix Division by zero in XMenuWidget() of MagickCore/widget.c
    
    * Fix memory leak in AnimateImageCommand() of MagickWand/animate.c and DisplayImageCommand() of MagickWand/display.c
    
    * fix Division by zero in ReadEnhMetaFile() of coders/emf.c
    
    * Resolve conflicts
    
    * fix issue: outside the range of representable values of type 'unsigned char' at coders/psd.c:1025
    
    * fix error: 4e+26 is outside the range of representable values of type 'unsigned long' at coders/pcl.c:299
    
    Co-authored-by: zhailiangliang <zhailiangliang@loongson.cn>

M	coders/pcl.c
